Toggleable button and storage sync

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="button.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <button id="changeColor"></button>
+
+        <div class="row">
+            <h1>  autofold  </h1>
+        </div>
+
+        <div class="row">
+            <button class="button-primary" id="toggleButton">Turn On</button>
+            <!-- <button class="button" id="optionButton">Options</button> -->
+        </div>
+
+
+        <script src="js/jquery-3.6.0.min.js"></script>
         <script src="popup.js"></script>
     </body>
 </html>
