Check for valid website

--- a/src/popup.html
+++ b/src/popup.html
@@ -5,13 +5,17 @@
     </head>
     <body>
 
-        <div class="row">
+        <div id="header" class="container title">
             <h1>  autofold  </h1>
         </div>
 
-        <div class="row">
+        <div id="body" class="container">
             <button class="button-primary" id="toggleButton">Turn On</button>
             <!-- <button class="button" id="optionButton">Options</button> -->
+
+            <div id="messages" class="container">
+
+            </div>
         </div>
 
 
