Solve this storage issue tomorrow

--- a/src/options.html
+++ b/src/options.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div id="buttonDiv">
-    </div>
-    <div>
-      <p>Choose a different background color!</p>
+    <h>Customize Range</h>
+    <div id="range" class="range-container">
+
     </div>
     <script src="options.js"></script>
   </body>
