Create table of buttons

--- a/src/options.html
+++ b/src/options.html
@@ -5,9 +5,13 @@
   </head>
   <body>
     <h>Customize Range</h>
-    <div id="range" class="range-container">
+    <div id="main" class="container">
+      <div id="range" class="range-container">
 
+      </div>
     </div>
+    
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
