Working save button

--- a/src/options.html
+++ b/src/options.html
@@ -6,12 +6,12 @@
   <body>
     <h>Customize Range</h>
     <div id="main" class="container">
-      <div id="range" class="range-container">
+      <div id="range" class="container">
 
       </div>
     </div>
     
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="options.js"></script>
+    <script src="js/options.js"></script>
   </body>
 </html>
