--- a/src/popup.html
+++ b/src/popup.html
@@ -22,6 +22,6 @@
 
 
         <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="popup.js"></script>
+        <script src="js/popup.js"></script>
     </body>
 </html>
