--- a/src/popup.html
+++ b/src/popup.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
+  <head>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <h>Customize Range</h>
+    <div id="main" class="container">
+      <div id="range" class="container">
 
-        <div id="header" class="container title">
-            <h1>  autofold  </h1>
-        </div>
-
-        <div id="body" class="container">
-            <button class="button-primary" id="toggleButton">Turn On</button>
-            <!-- <button class="button" id="optionButton">Options</button> -->
-
-            <div id="messages" class="container">
-
-            </div>
-        </div>
-
-
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/popup.js"></script>
-    </body>
+      </div>
+    </div>
+    
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/popup.js"></script>
+  </body>
 </html>
