--- a/src/popup.html
+++ b/src/popup.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h>Customize Range</h>
+    
     <div id="main" class="container">
+        
+      <h>Select Hands To Fold</h>
       <div id="range" class="container">
 
       </div>
