--- a/src/popup.html
+++ b/src/popup.html
@@ -6,8 +6,8 @@
   <body>
     
     <div id="main" class="container">
-        
-      <h>Select Hands To Fold</h>
+
+      <h>Select Hands To Play</h>
       <div id="range" class="container">
 
       </div>
