integrate jQuery-UI selectable

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -14,6 +15,7 @@
     </div>
     
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/popup.js"></script>
   </body>
 </html>
